-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.0b4

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2010 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.0b4
-------------------

11/24/10
    - Added support for the MOSEK optimizer for large-scale linear and
      quadratic programming. To use MOSEK for the DC OPF, set
      OPF_ALG_DC = 600. Specific LP algorithms can be selected by
      the MOSEK_LP_ALG option. Requires the Matlab interface for MOSEK,
      available from http://www.mosek.com/.
    - Added function qps_mosek() for solving QP and LP problems using
      the common QP solver interface used in MATPOWER. The qps_matpower()
      function also includes the option to use CPLEX.

11/16/10
    - Fixed bug in opf_setup() where indexing data for branch angle
      difference limits was not being saved in the case of DC OPF.
    - Added support for the IBM ILOG CPLEX optimizer for
      large scale linear and quadratic programming. To use CPLEX
      for the DC OPF, set OPF_ALG_DC = 500 and choose the specific
      CPLEX solver using options CPLEX_LPMETHOD and CPLEX_QPMETHOD.
      Requires the Matlab interface for CPLEX, available from
      http://www.ibm.com/software/integration/optimization/cplex-optimizer/.
    - Added function qps_cplex() for using CPLEX to solve QP and LP
      problems using the common QP solver interface used in MATPOWER. The
      qps_matpower() function also includes the option to use CPLEX.
    
11/9/10
    - Fixed an indexing bug in dcopf_solver.m affecting cases with a mix
      of piecewise linear and polynomial costs (unless the polynial costs
      came after all of the pwl costs).

10/12/10
    - Performance optimization in opf_consfcn.m. Assign sparse cols
      then transpose instead of assigning sparse rows. Results in >2x